--- a/grabbit/app/src/main/res/layout/itemlist_view_onmain.xml
+++ b/grabbit/app/src/main/res/layout/itemlist_view_onmain.xml
@@ -32,7 +32,7 @@
             android:contentDescription="@string/productContentDescription"
             android:id="@+id/img_home"
             android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"
@@ -47,7 +47,7 @@
                 android:layout_gravity="top"
                 android:fontFamily="@font/sofia_pro_semi_bold"
                 android:id="@+id/txt_name_home"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
