--- a/grabbit/app/src/main/res/layout/activity_operator_product_listing.xml
+++ b/grabbit/app/src/main/res/layout/activity_operator_product_listing.xml
@@ -40,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/progressBar"
+        android:id="@+id/pb_op_product_listing"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
