--- a/grabbit/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/grabbit/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,9 +4,9 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/navigationHome"></item>
 
-    <item android:id="@+id/navigation_recepies"
-        android:icon="@drawable/ic_shopping_cart_black_24dp"
-        android:title="@string/navigationCart"></item>
+<!--    <item android:id="@+id/navigation_recepies"-->
+<!--        android:icon="@drawable/ic_shopping_cart_black_24dp"-->
+<!--        android:title="@string/navigationCart"></item>-->
 
     <item android:id="@+id/navigation_account"
         android:icon="@drawable/ic_face_black_24dp"
